# ray-tracer

./: README.md
Projeto 1/: CMakeCache.txt
Projeto 1/src/core/: api.cpp  api.h  background.cpp  background.h  film.cpp  mat3.hpp  parser.cpp  parser.h  point3.hpp  rt3.h  vec3.hpp
Projeto 2/: cmake_install.cmake
Projeto 2/src/core/: api.cpp  api.h  camera.cpp  camera.h  film.cpp  film.h  parser.cpp  ray.h  rt3.h  vec3.hpp
Projeto 3/scene/: scene_05.xml
Projeto 3/src/core/: api.cpp  api.h  camera.h  film.cpp  film.h  flatmaterial.h  image_io.cpp  mat3.hpp  material.h  paramset.h  parser.cpp  parser.h  primitive.h  ray.h  rt3-base.h  scene.h  sphere.h  surfel.h  vec3.hpp
Projeto 4/: .gitignore  Makefile  README.md
Projeto 4/scene/: scene_07_1.xml
Projeto 4/src/core/: api.cpp  api.h  background.h  camera.cpp  flatintegrator.h  flatmaterial.h  integrator.cpp  integrator.h  material.h  parser.cpp  point2.hpp  point3.hpp  ray.h  scene.h  sphere.h
Projeto 5/: README.md
Projeto 5/data/: directional_old.xml
Projeto 5/scene/: teste.xml
Projeto 5/scene/lights_scene/: geometry_ambient.xml  geometry_spot.xml
Projeto 5/src/core/: aggregate_primitive.h  api.cpp  blinnmaterial.hpp  camera.h  geometric_primitive.h  parser.cpp  primlist.h  ray.h  rt3.h  (+2 more)
Projeto 6/data/: 4spheres_geometry.xml  directional_light.xml  local_spheres.xml  spot_3.xml
Projeto 6/scene/: geometry_spheres.xml  scene_05.xml  scene_06.xml
Projeto 6/support_code/trimesh/source/: CMakeLists.txt  README.md
Projeto 6/support_code/trimesh/source/src/: main.cpp  rt3.h  triangle.cpp  triangle.h
(+43 files in other folders)
